fixed alignment of mobile banner

--- a/css/app.sass
+++ b/css/app.sass
@@ -41,7 +41,7 @@ a
 
     .ad-small
         display: block
-        position: absolute
+        position: fixed
         bottom: 0
         left: 0
     .ad-large
